# VisualEffect

./: .gitignore  CMakeLists.txt  README.md  VisualEffect.podspec  build.sh
Lottie/: Podfile
Lottie/Lottie/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Lottie/Lottie.docc/: Lottie.md
Lottie/Lottie.docc/doc/: index.md
Lottie/Lottie/Base.lproj/: Main.storyboard
Lottie/LottieiOS.xcodeproj/: project.pbxproj
Lottie/LottieiOS.xcworkspace/: contents.xcworkspacedata
android/: JNI.md  settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
ios/: Podfile  README.md
ios/VisualEffect/: AppDelegate.h  AppDelegate.m  main.m
ios/VisualEffect.xcodeproj/: project.pbxproj
ios/VisualEffect.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/VisualEffect.xcworkspace/: contents.xcworkspacedata
ios/VisualEffect/Example/: CGDrawController.h  CGDrawController.m
ios/VisualEffect/VisualEffect/: AppDelegate.h  ViewController.m  VisualEffect.h  main.m
ios/VisualEffect/VisualEffect.docc/: VisualEffect.md
ios/VisualEffect/VisualEffect.xcodeproj/: project.pbxproj
ios/VisualEffect/VisualView.xcodeproj/: project.pbxproj
ios/VisualView/VisualEffect/: AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m
ios/VisualView/VisualView.xcodeproj/: project.pbxproj
ios/libVisualEffect/VisualEffect/: VisualEffect.h  VisualEffect.m
ios/libVisualEffect/VisualEffect.docc/: VisualEffect.md
ios/libVisualEffect/VisualEffect.xcodeproj/: project.pbxproj
mac/VisualEffect.xcworkspace/: contents.xcworkspacedata
mac_out/: CMakeCache.txt  Makefile  cmake_install.cmake
src/core/: CGDrawFramebufferCache.cpp  CGDrawTexture.h
src/input/: CGDrawInput.h
src/output/: CGDrawTextureOutput.h
src/public/: CGDrawEngine.cpp
src/utils/: CGShaderUtil.cpp  CGShaderUtil.h
src/vex/: Vex.h
src/vga/: Vga.h
(+150 files in other folders)
